css/budget.css
/* zebra stripe colors: https://coolors.co/FFFFFF-F2FBFF-c2edff-A6E0FF */
#budget_table {
	display: flex;
	flex-direction: column;
	/* align-items: center; */
	/* justify-content: center; */
	padding: 16px;
	overflow: scroll;
}
#pagecontainer {
	max-width: 1200px;
}
#arm_dropdowns {
	display: flex;
	margin: auto;
}
#arm_dropdowns div {
	margin-right: 24px;
}
.arm button.active-arm {
	background-color: #007bff;
	border-color: #006bef;
	color: white;
}

div#arm_tables {
	margin: auto;
}
.arm_table {
	display: none;
	font-size: 1rem;
	margin: auto;
}
.arm_table th, .arm_table td:nth-child(1) {
	padding: 8px 8px;
	text-align: center;
}
.arm_table .visit_total {
	padding-left: 8px;
	text-align: center;
}
.arm_table tbody tr:nth-child(odd) td {
	background-color: #F2F6FB;
}
.arm_table tbody tr:nth-child(even) td {
	background-color: #E9ECF6;
}
.arm_table tbody tr:nth-child(odd) td.nonzero {
	background-color: #c2edff;
}
.arm_table tbody tr:nth-child(even) td.nonzero {
	background-color: #A6E0FF;
}
.arm_table tbody tr:last-child td:first-child {
	background-color: #FFFFFF;
}
.proc_cell {
	text-align: center;
}
.proc_cell button {
	display: none;
}
.proc_count, .visit_total {
	font-size: 1.25rem;
}
td.proc_dd_cell, .proc_cell, .visit_total, .arm_table th:not(:first-child) {
	border: 1px solid gray;
}

#tinbudget_edit_procedures .modal-body {
	display: flex;
	flex-direction: column;
	align-items: center;
}
#edit_procedures th, #edit_procedures td {
	padding: 8px;
	text-align: center;
	border: 1px solid black;
}
/* #edit_procedures td.name input { */
	/* width: 250px; */
/* } */
/* #edit_procedures td.cost input { */
	/* width: 75px; */
/* } */
/* #edit_procedures td.cpt input { */
	/* width: 650px; */
/* } */
.ui-autocomplete { z-index:2147483647; }	/* prevent autocomplete from being hidden behind modal */
#edit_procedure_buttons {
	display: flex;
	width: 100%;
	justify-content: space-evenly;
}
#select_visits, #select_arms {
	display: flex;
	align-items: center;
	flex-direction: column;
}
.visit_select, .arm_select {
	max-width: 100%;
	margin: 8px;
}

